--- a/app/src/main/res/layout/fragment_register_form.xml
+++ b/app/src/main/res/layout/fragment_register_form.xml
@@ -4,7 +4,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".Fragments.Register_form">
+    tools:context=".Fragments.Register_form"
+    >
 
 <ScrollView
     android:layout_width="match_parent"
@@ -14,10 +15,9 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_margin="15dp"
         android:background="#FFFFFF"
         android:orientation="vertical"
-        tools:context=".MainActivity">
+        >
 
         <ImageView
             android:id="@+id/regImage"
